--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@iconify/react": "^4.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.18",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2"
