--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-mailto": "^0.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
