--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-mailto": "^0.4.0",
     "tailwind-merge": "^2.2.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
