--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/react": "^4.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.2.9",
+    "hamburger-react": "^2.5.1",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
