--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "framer-motion": "^11.2.9",
     "hamburger-react": "^2.5.1",
     "next": "^14.1.4",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-mailto": "^0.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar-hide": "^1.1.7",
