--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.13.0",
 		"react-mailto": "^0.4.0",
+		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-scrollbar-hide": "^1.1.7",
 		"unsplash-js": "^7.0.19",
