--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"clsx": "^2.1.0",
 		"framer-motion": "^11.2.9",
 		"hamburger-react": "^2.5.1",
+		"lucide-react": "^0.487.0",
 		"next": "^14.1.4",
 		"node-cache": "^5.1.2",
 		"react": "^18",
